tests/baselines/reference/duplicatePropertiesInStrictMode.errors.txt
duplicatePropertiesInStrictMode.ts(4,3): error TS1117: An object literal cannot have multiple properties with the same name.


==== duplicatePropertiesInStrictMode.ts (1 errors) ====
    "use strict";
    var x = {
      x: 1,
      x: 2
      ~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }